axion-telemetry-query-service/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-telemetry 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-telemetry
  template:
    metadata:
      labels:
        app: axion-telemetry 
    spec:
      containers:
        - name: axion-telemetrycontainer
          image: us-central1-docker.pkg.dev/project-a1c51fe0-43ef-44f5-a46/axionsystemar99/axion-telemetry:v1
          ports:
            - containerPort: 8000
