axion-telemetry-query-service/manifest/servicenew.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-telemetry-service
  annotations:
    cloud.google.com/backend-config: '{"default": "telemetry-backend-config"}'
spec:
  type: NodePort
  selector:
    app: axion-telemetry
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
