axion-telemetry-query-service/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "backend-ssl-cert"
spec:
  rules:
  - host: axion-telemetry-service.phohajaleabi.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axion-telemetry-service
            port:
              number: 8000
